# Barbarossa

./: .gitignore  BUILDING.md  Barbarossa-NB.tex  Barbarossa.cabal  LICENSE  README.md  stack.yaml
Eval/: BasicEval.hs  Eval.hs  FileParams.hs
Hash/: OtherTT.hs  TransTab.hs  Zobrist.hs
Main/: BCE.hs  Barbarossa.hs  EvalVects.hs  Evalo.hs  Evolve.hs  EvolveSelf.hs  MMTO.hs  Mtg.hs  SCO.hs  SSO.hs  SelfPlay.hs  TexelError.hs  optiRANSAC.py  optiScale.py  optimize.py
Moves/: Base.hs  BaseTypes.hs  BitBoard.hs  Board.hs  CurSe.hs  Fen.hs  GenMagics.hs  History.hs  Magics.hs  Moves.hs  Muster.hs  Notation.hs  POI.hs  Pattern.hs  SEE.hs  ShowMe.hs
Search/: Albeta.hs  AlbetaTypes.hs  CStateMonad.hs  SearchMonad.hs
Struct/: Config.hs  Context.hs  MidEnd.hs  Params.hs  Status.hs  Struct.hs
Tune/: Base.hs  Reinforce.hs
Uci/: UCI.hs  UciGlue.hs
