Name:                Barbarossa
Version:             0.3.0
Synopsis:            UCI chess engine written in Haskell
License:             BSD3
License-file:        LICENSE
Author:              Nicu Ionita
Maintainer:          nicu.ionita@acons.at
Copyright:           Nicu Ionita 2013 - 2015
Category:            Game
Build-type:          Simple
Cabal-version:       >=1.8

Flag Profile
  Description:	Enables profile support
  Default:	False

Executable Barbarossa
  Main-is:	Main/Barbarossa.hs
  Build-depends: base >= 4.5, array, old-time, containers, mtl, parsec, vector,
                 random, stream-fusion, directory, transformers, QuickCheck, text
  GHC-Options: -O2 -Wall
               -funbox-strict-fields -threaded -rtsopts
               -fspec-constr-count=24
               -funfolding-use-threshold=32
               -- -msse4.2
               -ddump-simpl -ddump-to-file -dsuppress-all -dsuppress-uniques
               -ddump-opt-cmm -ddump-asm
  if flag(profile)
    GHC-Options: -auto-all -with-rtsopts="-p"
  else
    -- GHC-Options: -with-rtsopts=-N2 -M256m -H128m
    GHC-Options: -with-rtsopts=-N3

--Executable MMTO
--  Main-is:	Main/MMTO.hs
--  Build-depends: base >= 4.5, array, old-time, containers, mtl, parsec, vector,
--                 random, stream-fusion, directory, transformers,
--                 QuickCheck, network >= 2.4, text, split
--  GHC-Options: -O2 -Wall
--               -funbox-strict-fields -threaded -rtsopts
--               -fspec-constr-count=24
--               -funfolding-use-threshold=32
--               -- -msse4.2
--               -ddump-simpl -ddump-to-file -dsuppress-all -dsuppress-uniques
--               -ddump-opt-cmm -ddump-asm
