Name:                Barbarossa
Version:             0.5.0
Synopsis:            UCI chess engine written in Haskell
License:             BSD3
License-file:        LICENSE
Author:              Nicu Ionita
Maintainer:          nicu.ionita@acons.at
Copyright:           Nicu Ionita 2013 - 2016
Category:            Game
Build-type:          Simple
Cabal-version:       >=1.8

Flag sse42
  Description:	Enable SSE4.2 support
  Default:	False

Flag ddump
  Description:  Enable ddumps
  Default:      True

Executable Barbarossa
  Main-is:	Main/Barbarossa.hs
  Build-depends:
      base >= 4.5,
      array,
      old-time,
      containers,
      mtl,
      parsec,
      vector,
      vector-algorithms,
      random,
      directory,
      transformers,
      QuickCheck,
      text
  Other-modules:
      Eval.BasicEval,
      Eval.Eval,
      Eval.FileParams,
      Hash.TransTab,
      Hash.Zobrist,
      Moves.Base,
      Moves.BaseTypes,
      Moves.BitBoard,
      Moves.Board,
      Moves.Fen,
      Moves.GenMagics,
      Moves.History,
      Moves.Magics,
      Moves.Moves,
      Moves.Notation,
      Moves.Pattern,
      Moves.ShowMe,
      Search.Albeta,
      Search.AlbetaTypes,
      Search.CStateMonad,
      Struct.Config,
      Struct.Context,
      Struct.Status,
      Struct.Struct,
      Uci.UCI,
      Uci.UciGlue
  GHC-Options: -O2 -Wall
               -funbox-strict-fields
               -threaded
               -rtsopts -with-rtsopts=-N3
               -fspec-constr-count=24
               -funfolding-use-threshold=32
               -fno-warn-tabs
  CPP-Options: -DSMSTRICT
  if flag(sse42)
    GHC-Options: -msse4.2
  if flag(ddump)
    GHC-Options: -ddump-simpl -ddump-to-file -dsuppress-all -dsuppress-uniques
                 -ddump-opt-cmm -ddump-asm

-- Executable SelfPlay
--   Main-is:	Main/SelfPlay.hs
--   Build-depends:
--       base >= 4.5,
--       array,
--       old-time,
--       containers,
--       filepath,
--       mtl,
--       parsec,
--       vector,
--       vector-algorithms,
--       random,
--       directory,
--       transformers,
--       QuickCheck,
--       text
--   Other-modules:
--       Eval.BasicEval,
--       Eval.Eval,
--       Eval.FileParams,
--       Hash.TransTab,
--       Hash.Zobrist,
--       Moves.Base,
--       Moves.BaseTypes,
--       Moves.BitBoard,
--       Moves.Board,
--       Moves.Fen,
--       Moves.GenMagics,
--       Moves.History,
--       Moves.Magics,
--       Moves.Moves,
--       Moves.Notation,
--       Moves.Pattern,
--       Moves.ShowMe,
--       Search.Albeta,
--       Search.AlbetaTypes,
--       Search.CStateMonad,
--       Struct.Config,
--       Struct.Context,
--       Struct.Status,
--       Struct.Struct,
--       Uci.UCI,
--       Uci.UciGlue
--   GHC-Options: -O2 -Wall
--                -funbox-strict-fields
--                -threaded
--                -rtsopts -with-rtsopts=-N3
--                -fspec-constr-count=24
--                -funfolding-use-threshold=32
--                -fno-warn-tabs
--   CPP-Options: -DSMSTRICT
--   if flag(sse42)
--     GHC-Options: -msse4.2
--   if flag(ddump)
--     GHC-Options: -ddump-simpl -ddump-to-file -dsuppress-all -dsuppress-uniques
--                  -ddump-opt-cmm -ddump-asm
-- 
-- Executable Evolve
--   Main-is:	Main/Evolve.hs
--   Build-depends: base >= 4.5, async, transformers, directory, filepath, process,
--                  old-time, old-locale, containers, random
--   GHC-Options: -O2 -Wall -threaded
--                -fno-warn-tabs

--Executable MMTO
--  Main-is:	Main/MMTO.hs
--  Build-depends: base >= 4.5, array, old-time, containers, mtl, parsec, vector,
--                 random, stream-fusion, directory, transformers,
--                 QuickCheck, network >= 2.4, text, split
--  GHC-Options: -O2 -Wall
--               -funbox-strict-fields -threaded -rtsopts
--               -fspec-constr-count=24
--               -funfolding-use-threshold=32
--               -- -msse4.2
--               -ddump-simpl -ddump-to-file -dsuppress-all -dsuppress-uniques
--               -ddump-opt-cmm -ddump-asm
